Fix Gallery Link to H1 was being covered by the nev bar for all sizes

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -309,8 +309,7 @@ button:hover {
 }
 
 .gallery-allignment h1 {
-    height: 10%;
-    padding-top: 3%;
+    padding-top: 5%;
     padding-bottom: 1.5%;
     text-align: center;
 }
@@ -336,7 +335,6 @@ button:hover {
 
 @media screen and (max-width: 950px) {
     #nav-title {
-
         font-size: 18px;
         letter-spacing: 2px;
         padding-left: 20px;
@@ -369,6 +367,10 @@ button:hover {
         width: 100%;
         height: 500px;
         float: right;
+    }
+
+    .gallery-allignment h1 {
+        padding-top: 8%;
     }
 }
 
@@ -440,6 +442,10 @@ button:hover {
 
     .contact-allignment {
         margin-top: 1%;
+    }
+
+    .gallery-allignment h1 {
+        padding-top: 12%;
     }
 }
 
